--- a/views/listings/index.ejs
+++ b/views/listings/index.ejs
@@ -1,19 +1,16 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>SwaagatInn</title>
-</head>
-<body>
+<% layout('/layouts/boilerplate') -%><body>
 <h3>All Listings</h3>
-<form method="GET" action="/listings/new">
-    <button>Create New Listing</button>
-</form>
+<% for(let listing of allListings) { %>
+<div class="card" style="width: 18rem;">
+    <img src="<%= listing.image.url %>" class="card-img-top" alt="...">
+    <div class="card-body">
+        <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card’s content.</p>
+    </div>
+</div>
+<% } %>
 <ul>
     <% for(let listing of allListings) { %>
         <li><a href="/listings/<%= listing._id %>"> <%= listing.title %> </a></li>
     <% } %>
 </ul>
 </body>
-</html>
