--- a/views/listings/index.ejs
+++ b/views/listings/index.ejs
@@ -1,16 +1,20 @@
-<% layout('/layouts/boilerplate') -%><body>
-<h3>All Listings</h3>
-<% for(let listing of allListings) { %>
-<div class="card" style="width: 18rem;">
-    <img src="<%= listing.image.url %>" class="card-img-top" alt="...">
-    <div class="card-body">
-        <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card’s content.</p>
-    </div>
-</div>
-<% } %>
-<ul>
+<% layout('/layouts/boilerplate') -%>
+<body>
+<h2 class="page-title">Discover Hidden Gems of India</h2>
+
+<div class="card-grid">
     <% for(let listing of allListings) { %>
-        <li><a href="/listings/<%= listing._id %>"> <%= listing.title %> </a></li>
+    <a href="/listings/<%= listing._id %>" class="card-link">
+        <div class="card">
+            <img src="<%= listing.image.url %>" alt="<%= listing.title %>" class="card-img">
+            <div class="card-body">
+                <h3 class="card-title"><%= listing.title %></h3>
+                <p class="card-desc"><%= listing.description %></p>
+                <p class="card-location"><%= listing.location %>, <%= listing.country %></p>
+                <p class="card-price">₹ <%= listing.price %> / night</p>
+            </div>
+        </div>
+    </a>
     <% } %>
-</ul>
+</div>
 </body>
