--- a/views/listings/show.ejs
+++ b/views/listings/show.ejs
@@ -1,29 +1,27 @@
 <% layout('/layouts/boilerplate') -%>
 <body>
-<h2 class="text-center mb-4">Listing Details</h2>
+<h2 class="form-heading text-center">Listing Details</h2>
 
 <div class="container">
-    <div class="row justify-content-center mb-3">
-        <div class="col-md-6 text-center">
-            <img src="<%= listing.image.url %>" alt="Listing image" class="img-fluid rounded mb-3">
-            <ul class="list-unstyled">
-                <li><strong><%= listing.title %></strong></li>
-                <li><%= listing.description %></li>
-                <li>₹ <%= listing.price.toLocaleString("en-IN") %></li>
-                <li><%= listing.location %>, <%= listing.country %></li>
-            </ul>
+    <div class="row justify-content-center mb-4">
+        <div class="col-md-6 ">
+            <img src="<%= listing.image.url %>" alt="Listing image" class="img-fluid rounded shadow-sm mb-4" style="max-height: 300px; object-fit: cover; width:100%">
+            <h4 class="card-title"><%= listing.title %></h4>
+            <p class="text-muted"><%= listing.description %></p>
+            <h5 class="text-success">₹ <%= listing.price.toLocaleString("en-IN") %></h5>
+            <p><i class="fa-solid fa-location-dot"></i> <%= listing.location %>, <%= listing.country %></p>
+            <div class="row justify-content-center mb-4">
+                <div class="col-md-6 d-flex justify-content-center gap-3 align-items-center">
+                    <a href="/listings/<%= listing._id %>/edit" class="btn btn-purple d-flex align-items-center justify-content-center px-4" style="height: 42px; width: 150px">Edit</a>
+                    <form method="POST" action="/listings/<%= listing._id %>?_method=DELETE">
+                        <button class="btn btn-danger d-flex align-items-center justify-content-center px-4" style="height: 42px; width: 150px">Delete</button>
+                    </form>
+                </div>
+            </div>
         </div>
     </div>
 
-    <div class="row justify-content-center">
-        <div class="col-md-3 text-end">
-            <a href="/listings/<%= listing._id %>/edit" class="btn btn-warning w-100">Edit</a>
-        </div>
-        <div class="col-md-3">
-            <form method="POST" action="/listings/<%= listing._id %>?_method=DELETE">
-                <button class="btn btn-danger w-100">Delete</button>
-            </form>
-        </div>
-    </div>
+    <!-- Aligned Button Row -->
+
 </div>
 </body>
