--- a/views/listings/edit.ejs
+++ b/views/listings/edit.ejs
@@ -1,6 +1,6 @@
 <% layout('/layouts/boilerplate') -%>
 
-<h2>Edit Your Hidden Gem 🏞️</h2>
+<h2 class="form-heading">Edit Your Hidden Gem 🏞️</h2>
 
 <form method="POST" action="/listings/<%= listing._id %>?_method=PUT">
 
