--- a/views/listings/new.ejs
+++ b/views/listings/new.ejs
@@ -2,34 +2,32 @@
 
 <h2 class="form-heading">Add a Cool Spot</h2>
 
-<form method="POST" action="/listings" class="listing-form offset-2">
-    <label for="title">Spot name?</label><br />
-    <input id="title" name="listing[title]" placeholder="Chill Cabin" type="text" /><br /><br />
+<form method="POST" action="/listings" class="listing-form offset-2" >
+    <label for="title">Spot name?</label>
+    <input id="title" name="listing[title]" placeholder="Chill Cabin" type="text" /><br />
 
-    <label for="description">What's it like?</label><br />
-    <textarea id="description" name="listing[description]" placeholder="Peaceful, wild, haunted?"></textarea><br /><br />
+    <label for="description">What's it like?</label>
+    <textarea id="description" name="listing[description]" placeholder="Peaceful, wild, haunted?"></textarea><br />
 
-    <label for="image">Got a pic?</label><br />
-    <input id="image" name="listing[image]" placeholder="Paste image link" type="text" /><br /><br />
+    <label for="image">Got a pic?</label>
+    <input id="image" name="listing[image]" placeholder="Paste image link" type="text" /><br />
 
-    <label for="price">Price (₹)?</label><br />
-    <input id="price" name="listing[price]" placeholder="999" type="number" /><br /><br />
 
     <div class="row ">
         <div class="col-md-6">
-            <label for="price">Price (₹)?</label><br />
-            <input id="price" name="listing[price]" placeholder="999" type="number" /><br /><br />
+            <label for="price">Price (₹)?</label>
+            <input id="price" name="listing[price]" placeholder="999" type="number" /><br />
         </div>
         <div class="col-md-6">
-            <label for="country" >Which country?</label><br />
-            <input id="country" name="listing[country]" placeholder="India" type="text" /><br /><br />
+            <label for="country" >Which country?</label>
+            <input id="country" name="listing[country]" placeholder="India" type="text" /><br />
         </div>
 
     </div>
 
 
-    <label for="location">Pin the place!</label><br />
-    <input id="location" name="listing[location]" placeholder="Rishikesh" type="text" /><br /><br />
+    <label for="location">Pin the place!</label>
+    <input id="location" name="listing[location]" placeholder="Rishikesh" type="text" /><br />
 
     <button type="submit">Add it </button>
 </form>
