--- a/views/listings/new.ejs
+++ b/views/listings/new.ejs
@@ -25,7 +25,7 @@
     <div class="row">
         <div class="col-md-6 mb-3">
             <label for="price" class="form-label">Price (₹)?</label>
-            <input id="price" name="listing[price]" placeholder="999" type="number" class="form-control" required />
+            <input id="price" name="listing[price]" placeholder="999"  class="form-control" required />
             <div class="invalid-feedback">Please enter valid price</div>
         </div>
 
