--- a/views/listings/show.ejs
+++ b/views/listings/show.ejs
@@ -19,6 +19,21 @@
                     </form>
                 </div>
             </div>
+            <div>
+                <h4>Leave a Review</h4>
+                <form>
+                    <div>
+                       <label for="review" class="form-label">Rating</label>
+                        <input type="range" min="1" max="5" step="1" value="1" name="rating" id="rating">
+
+                    </div>
+                    <div>
+                        <label for="comment" class="form-label">Comments</label>
+                        <textarea name="comment" id="comment" cols="30" rows="10" class="form-control"></textarea>
+                    </div>
+                    <button class="btn btn-info d-flex align-items-center justify-content-center px-4" style="height: 42px; width: 150px">Post</button>
+                </form>
+            </div>
         </div>
     </div>
 
