--- a/views/listings/show.ejs
+++ b/views/listings/show.ejs
@@ -20,9 +20,9 @@
                 </div>
             </div>
             <div>
-                <h4>   Leave a Review    </h4>
-                <form action="/listings/<%= listing._id %>/reviews" method="POST" novalidate class="needs-validation">
 
+                <form action="/listings/<%= listing._id %>/reviews" method="POST" novalidate class="needs-validation">
+                    <h4>   Leave a Review    </h4>
                 <div>
                        <label for="review" class="form-label">Rating</label>
                         <input type="range" min="1" max="5" step="1" value="3" name="review[rating]" id="rating">
@@ -39,7 +39,10 @@
                     <button class="btn btn-info d-flex align-items-center justify-content-center px-4" style="height: 42px; width: 150px">Post</button>
                 </form>
             </div>
+
         </div>
+        <h4>All Reviews</h4>
+        <p><%= listing.reviews%></p>
     </div>
 
 
