--- a/views/users/signup.ejs
+++ b/views/users/signup.ejs
@@ -19,6 +19,10 @@
             </div>
 
             <button type="submit" class="btn btn-primary w-100">Sign Up</button>
+            <!-- Login link -->
+            <div class="text-center mt-3">
+                <small>Already have an account? <a href="/login">Login</a></small>
+            </div>
         </form>
     </div>
 </div>
