--- a/views/listings/show.ejs
+++ b/views/listings/show.ejs
@@ -6,6 +6,8 @@
     <div class="row justify-content-center mb-4">
         <div class="col-md-6 ">
             <img src="<%= listing.image.url %>" alt="Listing image" class="img-fluid rounded shadow-sm mb-4" style="max-height: 300px; object-fit: cover; width:100%">
+            <p>Posted by:  <i><%= listing.owner.username %></i></p>
+
             <h4 class="card-title"><%= listing.title %></h4>
             <p class="text-muted"><%= listing.description %></p>
             <h5 class="text-success">₹ <%= listing.price.toLocaleString("en-IN") %></h5>
@@ -19,8 +21,8 @@
                     </form>
                 </div>
             </div>
+            <%if(currUser){%>
             <div>
-
                 <form action="/listings/<%= listing._id %>/reviews" method="POST" novalidate class="needs-validation">
                     <h4>   Leave a Review    </h4>
                     <div>
@@ -39,8 +41,11 @@
                     <button class="btn btn-info d-flex align-items-center justify-content-center px-4" style="height: 42px; width: 150px">Post</button>
                 </form>
             </div>
+            <%}%>
+
 
         </div>
+
         <div class="row">
             <div class="col-12">
                 <h3>Reviews</h3>
@@ -50,7 +55,7 @@
                     <div class="col-md-6">
                         <div class="card mb-3">
                             <div class="card-body">
-                                <h5 class="card-title">Reviewer Name Placeholder</h5>
+                                <h5 class="card-title">@<%= review.author.username %></h5>
                                 <p class="card-text">
                                     <%= review.comment %>
                                 </p>
